:zap: fixing alignment of share links

--- a/assets/less/main.less
+++ b/assets/less/main.less
@@ -28,6 +28,7 @@ header.top {
 		width: 450px;
 		top: 8px;
 		right: 0;
+		text-align: left;
 
 		& > div {
 			display: inline-block;
